--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.3",
     "nodemon": "^3.1.10",
+    "redis": "^5.10.0",
     "validator": "^13.15.26"
   }
 }
